<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/Constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.ekelseya.palettedesign.ColorBuild">

        <ImageView
                android:id="@+id/buildIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/build_color_block"
                app:layout_constraintStart_toStartOf="@+id/build_color_block"
                app:layout_constraintBottom_toBottomOf="@+id/build_color_block"
                app:layout_constraintTop_toTopOf="@+id/build_color_block"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="Icon" android:background="@drawable/get_color"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>

        <ImageView
                android:id="@+id/build_color_block"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.0"
                android:contentDescription="@string/primary_color"/>
        <Button
                android:text="@string/enter_color_values"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/value_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/build_color_block" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:background="@color/colorPrimary" android:padding="8dp"/>
        <Button
                android:text="@string/choose_color_from_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/image_button"
                app:layout_constraintTop_toBottomOf="@+id/value_button" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:background="@color/colorPrimary" android:padding="8dp" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>
        <Button
                android:text="@string/choose_color_with_color_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/picker_button"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:background="@color/colorPrimary" android:padding="8dp" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
                android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="@+id/textGreen"/>
        <EditText
                android:id="@+id/editRed"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10" android:layout_marginTop="8dp"
                android:layout_marginBottom="250dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible" app:layout_constraintTop_toBottomOf="@+id/value_button"
                android:text="0"/>
        <EditText
                android:id="@+id/editGreen"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                app:layout_constraintStart_toEndOf="@+id/editRed" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/editBlue" android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="250dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible" app:layout_constraintTop_toBottomOf="@+id/value_button"
                android:text="0"/>

        <EditText
                android:id="@+id/editBlue"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="250dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible" app:layout_constraintTop_toBottomOf="@+id/value_button"
                android:text="0"/>
        <EditText
                android:id="@+id/editHex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage|text"
                app:layout_constraintTop_toBottomOf="@+id/textGreen" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0" android:layout_marginTop="8dp"
                android:visibility="invisible"/>

        <TextView
                android:id="@+id/textRed"
                android:text="@string/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editRed"
                app:layout_constraintStart_toStartOf="@+id/editRed" app:layout_constraintEnd_toEndOf="@+id/editRed"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible"/>

        <TextView
                android:id="@+id/textGreen"
                android:text="@string/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editGreen"
                app:layout_constraintStart_toStartOf="@+id/editGreen" app:layout_constraintEnd_toEndOf="@+id/editGreen"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible"/>

        <TextView
                android:id="@+id/textBlue"
                android:text="@string/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/editBlue"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editBlue" app:layout_constraintEnd_toEndOf="@+id/editBlue"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible"/>

        <TextView
                android:id="@+id/textHex"
                android:text="@string/hexadecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editHex" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:visibility="invisible"/>
        <Button
                android:text="@string/set_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/set_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:visibility="invisible"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/build_color_block"
                app:layout_constraintBottom_toTopOf="@+id/editGreen" app:layout_constraintVertical_bias="0.0"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/nameText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textHex" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:inputType="textNoSuggestions" android:hint="@string/color_name"
                android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>