<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">
    <ImageView
            android:id="@+id/image_color_1"
            android:layout_width="0dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/primary_color" android:background="#CAEBF2"/>
    <ImageView
            android:id="@+id/image_color_2"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_color_1"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/secondary_color" android:background="#A9A9A9"/>
    <ImageView
            android:id="@+id/image_color_3"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_color_2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/accent_color" android:background="#FF3B3F"/>
    <ImageView
            android:id="@+id/image_color_4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_color_3"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/accent_color" android:background="#EFEFEF"/>
    <TextView
            android:id="@+id/color_label_1"
            android:text="@string/sky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image_color_1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/image_color_1"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="36sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/primary_hex" app:layout_constraintVertical_bias="1.0"
            android:typeface="monospace"/>
    <TextView
            android:id="@+id/color_label_2"
            android:text="@string/carbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/secondary_hex"
            app:layout_constraintStart_toStartOf="@+id/image_color_2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/image_color_2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:textSize="30sp" android:typeface="monospace"/>
    <TextView
            android:id="@+id/color_label_3"
            android:text="@string/watermelon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tertiary_hex"
            app:layout_constraintStart_toStartOf="@+id/image_color_3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/image_color_3"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:textSize="24sp" android:typeface="monospace"/>
    <TextView
            android:id="@+id/color_label_4"
            android:text="@string/neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/accent_hex"
            app:layout_constraintStart_toStartOf="@+id/image_color_4"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/image_color_4"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:textSize="24sp" android:typeface="monospace"/>
    <TextView
            android:id="@+id/primary_hex"
            android:text="#CAEBF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_color_1"
            app:layout_constraintEnd_toEndOf="@+id/color_label_1"
            app:layout_constraintStart_toStartOf="@+id/image_color_1" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/image_color_1"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:id="@+id/secondary_hex"
            android:text="#A9A9A9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_color_2"
            app:layout_constraintEnd_toEndOf="@+id/color_label_2"
            app:layout_constraintStart_toStartOf="@+id/image_color_2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/image_color_2"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:id="@+id/tertiary_hex"
            android:text="#FF3B3F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_color_3"
            app:layout_constraintEnd_toEndOf="@+id/color_label_3"
            app:layout_constraintStart_toStartOf="@+id/image_color_3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/image_color_3"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:id="@+id/accent_hex"
            android:text="#EFEFEF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_color_4"
            app:layout_constraintEnd_toEndOf="@+id/color_label_4"
            app:layout_constraintStart_toStartOf="@+id/image_color_4"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/image_color_4"
            android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>